--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,36 @@
-# ignore all .exe files
-*.exe
+## C C++.gitignore
+## https://github.com/github/gitignore/blob/master/C%2B%2B.gitignore
+##
 
-# ignore all .o files
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
 *.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
